--- a/templates/3j.html
+++ b/templates/3j.html
@@ -100,8 +100,8 @@
 
       // balls
 
-
-      fetch('/stats', { method: 'GET'})
+ /*
+      fetch('/stats/points', { method: 'GET'})
       .then(response => response.json())
       .then(data => {
         for (i = 0; i < data.length; i++){
@@ -117,6 +117,97 @@
          }
          renderer.render(scene, camera);
         });
+  */
+
+        // fetch('/stats/assists', { method: 'GET'})
+        // .then(response => response.json())
+        // .then(data => {
+        //   for (i = 0; i < data.length; i++){
+        //     ypos = data[i][3]/60-80;
+        //
+        //     var ball = new THREE.SphereGeometry(10, 32, 32);
+        //     var ballMaterial = new THREE.MeshLambertMaterial({color: 0xDD6600});
+        //     var ballMesh = new THREE.Mesh(ball, ballMaterial);
+        //
+        //     ballMesh.position.set(xpos - i*60.5, ypos, 0);
+        //     scene.add(ballMesh);
+        //     console.log(ypos);
+        //    }
+        //    renderer.render(scene, camera);
+        //   });
+
+          fetch('/stats/rebounds', { method: 'GET'})
+          .then(response => response.json())
+          .then(data => {
+            for (i = 0; i < data.length; i++){
+              ypos = data[i][4]/60-180;
+
+              var ball = new THREE.SphereGeometry(10, 32, 32);
+              var ballMaterial = new THREE.MeshLambertMaterial({color: 0xDD6600});
+              var ballMesh = new THREE.Mesh(ball, ballMaterial);
+
+              ballMesh.position.set(xpos - i*60.5, ypos, 0);
+              scene.add(ballMesh);
+              console.log(ypos);
+             }
+             renderer.render(scene, camera);
+            });
+
+      function onWindowResize() {
+
+  			camera.aspect = window.innerWidth / window.innerHeight;
+  			camera.updateProjectionMatrix();
+
+  			renderer.setSize( window.innerWidth, window.innerHeight );
+      }
+
+      var raycaster = new THREE.Raycaster();
+      var mouse = new THREE.Vector2(), INTERSECTED;
+
+      function onMouseMove( event ) {
+
+      	// calculate mouse position in normalized device coordinates
+      	// (-1 to +1) for both components
+        event.preventDefault();
+      	mouse.x = ( event.clientX / window.innerWidth ) * 2 - 1;
+      	mouse.y = - ( event.clientY / window.innerHeight ) * 2 + 1;
+
+      }
+
+      function render() {
+
+      	// update the picking ray with the camera and mouse position
+      	raycaster.setFromCamera( mouse, camera );
+
+      	// calculate objects intersecting the picking ray
+      	var intersects = raycaster.intersectObjects( scene.children );
+
+
+				if ( intersects.length > 0 ) {
+
+					if ( INTERSECTED != intersects[ 0 ].ballMesh ) {
+
+						if ( INTERSECTED ) INTERSECTED.material.emissive.setHex( INTERSECTED.currentHex );
+
+						INTERSECTED = intersects[ 0 ].ballMesh;
+						INTERSECTED.currentHex = INTERSECTED.material.emissive.getHex();
+						INTERSECTED.material.emissive.setHex( 0xff0000 );
+
+					}
+
+				}
+        else {
+
+					if ( INTERSECTED ) INTERSECTED.material.emissive.setHex( INTERSECTED.currentHex );
+
+					INTERSECTED = null;
+        }
+
+      	renderer.render( scene, camera );
+
+      }
+
+
 
 
 
